--- a/Ivan-Richard/ClientApp/src/index.html
+++ b/Ivan-Richard/ClientApp/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ivan_Richard</title>
+  <title>Ivan Richard</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon_glob.png">
 </head>
 <body>
   <app-root>Loading...</app-root>
